Set TextInputType of CVC prompt to TEXT_INPUT_TYPE_NUMBER.

BUG=701263

Review-Url: https://codereview.chromium.org/2774303002
Cr-Commit-Position: refs/heads/master@{#459972}

Former-commit-id: b4bea78349858d797132879b14afe743703fefb2